FIX DISPLAY GRID ON SMALL VIEW

--- a/lesson-2/css/large.css
+++ b/lesson-2/css/large.css
@@ -3,6 +3,8 @@
 @media only screen and (min-width: 60em) {
 	main {
 		grid-template-columns: 1fr 1fr 1fr;
+        padding-left: 0;
+        min-width: 1200px;
 	}
 
 	main section:nth-child(3) {
