--- a/lesson-2/css/medium.css
+++ b/lesson-2/css/medium.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 32.5em){
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+	}
     h1{
         font-size: 2.5rem;
     }
@@ -15,4 +19,4 @@
         float: right;
         border-radius: 0 10px 0 0;
     }
-}
+   
